<resources>
    <string name="app_name">FitMe</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="date_birth">Date of birth</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>


    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">Date of birth</string>
    <string name="hint_date_selected">00/00/0000</string>
    <string name="hint_dec">0.0</string>
    <string name="idealWeight">Ideal weight</string>
    <string name="height">Height</string>
    <string name="idealBloodpressure">Ideal bloodpressure</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="f_radio">F</string>
    <string name="m_radio">M</string>
    <string name="imgView_content_desc">user\'s profile image.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="textView_inapp_desc">Your Personalised Health Guide</string>
    <string name="logout">log out</string>
    <string name="step_counter">
         android.hardware.sensor.stepcounter
   </string>


    <string name="step_detector">
         android.hardware.sensor.stepdetector
   </string>
    <string name="bloodpressure">Bloodpressure</string>
    <string name="tipText_eatsmart">Load up on the good stuff like fruits, veggies and lean meats,
        and avoid things that are high sodium or have added sugars. Basically, stick to real, whole foods.</string>
    <string name="tipText_getmoving">Aim for 30 minutes of moderate physical activity a day. Walk, swim or dance!</string>
    <string name="tipText_watchyourweight">he more you weigh, the harder your heart works to pump. Stay within a healthy weight range for your height.</string>
    <string name="topText_dontstress">This is a toughy, but it\'s necessary. Find out what causes stress in your life and cut back on it. If something isn\'t adding value to your life, why do it? Instead, swap out the stressors for stress-relievers and things that make you happy. Meditate, do yoga, breathe and, most importantly, get in some me-time!</string>

    <string-array name="habit_names">
        <item>Select a habit</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
        <item>Custom</item>
    </string-array>


</resources>
